update readme. update faq. update styles for wp4.4. prepare 0.5

--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,4 @@
  * @package Restrict User Access
  * @copyright Joachim Jensen <jv@intox.dk>
  * @license GPLv3
- */#rua-plugin-links.postbox{background-color:#ddecf4;border-color:#9fcadf;box-shadow:0 0 0 1px #fff inset,0 1px 1px rgba(0,0,0,.04)}#rua-plugin-links .hndle{border-bottom-color:#9fcadf;box-shadow:0 -1px #fff inset}#rua-options .extend select{width:250px}.fixed .column-role{width:15%}.fixed .column-handle{width:20%}
+ */#rua-plugin-links.postbox{background-color:#ddecf4;border-color:#9fcadf;box-shadow:0 0 0 1px #fff inset,0 1px 1px rgba(0,0,0,.04)}#rua-plugin-links .hndle{border-bottom-color:#9fcadf;box-shadow:0 -1px #fff inset}#rua-options .extend select{width:250px}#cas-container h3{font-size:14px}#cas-groups h3{margin:0}.fixed .column-role{width:15%}.fixed .column-handle{width:20%}
