--- a/css/style.css
+++ b/css/style.css
@@ -2,100 +2,5 @@
  * @package Restrict User Access
  * @author Joachim Jensen <jv@intox.dk>
  * @license GPLv3
- * @copyright 2017 by Joachim Jensen
- */
-.rua-section {
-  display: none;
-}
-.nav-tab-active:focus {
-  box-shadow: none;
-}
-#submitdiv .hndle,
-#submitdiv .handlediv {
-  display: none;
-}
-#submitdiv .cas-save {
-  background: #f5f5f5;
-  border-bottom: 1px solid #ddd;
-  overflow: hidden;
-  padding: 7px 10px;
-}
-#rua-plugin-links.postbox {
-  background-color: #ddecf4;
-  border-color: #9fcadf;
-  box-shadow: 0 0 0 1px #fff inset, 0 1px 1px rgba(0, 0, 0, 0.04);
-}
-#rua-plugin-links .hndle {
-  border-bottom-color: #9fcadf;
-  box-shadow: 0 -1px #fff inset;
-}
-#rua-options .extend select {
-  width: 250px;
-}
-.rua-cb {
-  line-height: 1;
-  display: inline-block;
-  vertical-align: bottom;
-}
-.rua-cb div {
-  box-sizing: border-box;
-  border-radius: 10px;
-  border: 2px solid #ababab;
-  width: 20px;
-  height: 20px;
-  font-size: 22px;
-  position: relative;
-}
-.rua-cb div:before {
-  font-family: dashicons;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  display: inline-block;
-}
-.rua-cb input {
-  display: none;
-}
-.permit input.checked ~ div {
-  color: #46b450;
-  border-color: #46b450;
-}
-.permit input.checked ~ div:before {
-  right: 4px;
-  bottom: 2px;
-  content: "\f147";
-}
-.deny input.checked ~ div {
-  color: #ff7058;
-  border-color: #ff7058;
-}
-.deny input.checked ~ div:before {
-  right: 3px;
-  bottom: 2px;
-  content: "\f335";
-}
-/**
- * Admin list table columns
- */
-.wp-list-table.fixed.striped > tbody > *:nth-child(2n+1) {
-  background-color: #f9f9f9;
-}
-.wp-list-table.fixed .column-name {
-  width: 20%;
-}
-.wp-list-table.fixed .column-role {
-  width: 15%;
-}
-.wp-list-table.fixed .column-duration {
-  width: 10%;
-}
-.wp-list-table.fixed .column-caps {
-  width: 10%;
-}
-.wp-list-table.fixed .column-handle {
-  width: 20%;
-}
-.wp-list-table.fixed .column-permit,
-.wp-list-table.fixed .column-deny {
-  width: 5%;
-}
+ * @copyright 2018 by Joachim Jensen
+ */#submitdiv .handlediv,#submitdiv .hndle,.rua-section{display:none}.nav-tab-active:focus{box-shadow:none}#submitdiv .cas-save{background:#f5f5f5;border-bottom:1px solid #ddd;overflow:hidden;padding:7px 10px}#rua-plugin-links.postbox{background-color:#ddecf4;border-color:#9fcadf;box-shadow:0 0 0 1px #fff inset,0 1px 1px rgba(0,0,0,.04)}#rua-plugin-links .hndle{border-bottom-color:#9fcadf;box-shadow:0 -1px #fff inset}#rua-options .extend select{width:250px}.rua-cb{line-height:1;display:inline-block;vertical-align:bottom}.rua-cb div{box-sizing:border-box;border-radius:10px;border:2px solid #ababab;width:20px;height:20px;font-size:22px;position:relative}.rua-cb div:before{font-family:dashicons;position:absolute;width:100%;height:100%;display:inline-block}.rua-cb input{display:none}.permit input.checked~div{color:#46b450;border-color:#46b450}.permit input.checked~div:before{right:4px;bottom:2px;content:"\f147"}.deny input.checked~div{color:#ff7058;border-color:#ff7058}.deny input.checked~div:before{right:3px;bottom:2px;content:"\f335"}.wp-list-table.fixed.striped>tbody>:nth-child(2n+1){background-color:#f9f9f9}.wp-list-table.fixed .column-name{width:20%}.wp-list-table.fixed .column-role{width:15%}.wp-list-table.fixed .column-caps,.wp-list-table.fixed .column-duration{width:10%}.wp-list-table.fixed .column-handle{width:20%}.wp-list-table.fixed .column-deny,.wp-list-table.fixed .column-permit{width:5%}
