--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /*!
  * @package Restrict User Access
- * @author Joachim Jensen <jv@intox.dk>
+ * @author Joachim Jensen <joachim@dev.institute>
  * @license GPLv3
- * @copyright 2019 by Joachim Jensen
+ * @copyright 2020 by Joachim Jensen
  */.rua-section{display:none}.nav-tab-active:focus{box-shadow:none}#submitdiv .hndle{display:none}#submitdiv .cas-save{background:#f5f5f5;border-bottom:1px solid #ddd;overflow:hidden;padding:7px 10px}.rua-metabox-holder .hndle{cursor:auto!important}.rua-metabox-holder .handlediv{display:none!important}#rua-plugin-links.postbox{background-color:#ddecf4;border-color:#9fcadf;box-shadow:0 0 0 1px #fff inset,0 1px 1px rgba(0,0,0,.04)}#rua-plugin-links .hndle{border-bottom-color:#9fcadf;box-shadow:0 -1px #fff inset}.rua-input-md{width:250px}.rua-input-sm{width:80px}.rua-form-table{width:97%;margin:0 auto}.rua-form-table tr td:first-child{min-width:30%}.rua-form-table tr td{border-bottom:1px solid #eee}.column-deny,.column-permit,.rua-cb{position:relative;text-align:center!important}.rua-cb{z-index:1}.rua-cb:checked+.rua-cb-label-0{background-color:rgba(252,155,164,.35)}.rua-cb:checked+.rua-cb-label-1{background-color:rgba(143,227,163,.4)}.rua-cb-label{position:absolute;width:100%;height:100%;top:0;left:0}.wp-list-table.fixed.striped>tbody>:nth-child(2n+1){background-color:#f9f9f9}.wp-list-table.fixed .column-name{width:20%}.wp-list-table.fixed .column-role{width:15%}.wp-list-table.fixed .column-caps,.wp-list-table.fixed .column-duration{width:10%}.wp-list-table.fixed .column-handle{width:20%}.wp-list-table.fixed .column-deny,.wp-list-table.fixed .column-permit{width:7%}
